<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Rrate" Id="{ac67f14b-de86-4e0f-b024-f80724755f36}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Rrate : REAL

VAR
	a : REAL := EXPT(GVL.conc_now,2); // (mol/m3)2
	b : REAL := GVL.const_Rk; // m3/mol/s
	c : REAL := EXP(-GVL.const_AE / (GVL.temp_now + GVL.temp_oset));
END_VAR
// mol2/m32 * m3/mol/s -> mol/m3/s]]></Declaration>
    <Implementation>
      <ST><![CDATA[Rrate := a * b * c;]]></ST>
    </Implementation>
    <LineIds Name="Rrate">
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>